[package]
name = "nexus-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["nexus-server", "nexus-client", "nexus-app"]

[workspace.dependencies]
serde = { version = "1.0.173", features = ["derive"]  }
nexus-common = { path = "../nexus-common" }
nexus-server = { path = "./nexus-server"  }
nexus-client = { path = "./nexus-client"  }
serde_json = { version = "1.0.103" }
reqwest = { version = "0.11.18", features = ["json"]}
anyhow = "1.0.58"
tokio = { version = "1.29.1" , features = ["full"] }


[dependencies]
serde = { workspace = true, features = ["derive"]}