[package]
name = "nexus-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace.dependencies]
serde = { version = "1.0.173", features = ["derive"]  }
nexus-common = { path = "../nexus-common" }
serde_json = { version = "1.0.103" }
reqwest = { version = "0.11.18", features = ["json"]}
anyhow = "1.0.58"
tokio = { version = "1.29.1" , features = ["full"] }
async-trait = { version = "0.1.71" }

[dependencies]
serde = { workspace = true, features = ["derive"]}
async-trait = { worskapce = true }
anyhow = { workspace = true }