[package]
name = "nexus-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nexus-client = { workspace = true }
nexus-common = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"]}
reqwest = { workspace = true }
egui = "0.22.0"
eframe = "0.22.0"
egui-toast = "0.8.0"
uuid = { version = "1.4.1", features = ["v4"]}