[package]
name = "nexus-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nexus-common = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
reqwest      = { workspace = true, features = ["json"] }
tokio        = { workspace = true, features = ["full"] }
futures = "0.3.28"