[package]
name = "nexus-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nexus-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"]}
anyhow = { workspace = true }
tokio = { workspace = true , features = ["full"] }
axum  = { version = "0.6.19" , features = ["default"] }
